# src/course_subscriptions/main.py
@@ -9,6 +9,9 @@ from typing import TYPE_CHECKING
 from fastapi import FastAPI
 
 from course_subscriptions.application import CourseSubscriptionsApp
+from course_subscriptions.course_subscriptions.change_course_capacity import (
+    routes as change_course_capacity_routes,
+)
 from course_subscriptions.course_subscriptions.student_course_subscriptions import (
     routes as student_course_subscriptions_routes,
 )
@@ -32,4 +35,5 @@ def create_app() -> FastAPI:
     app = FastAPI(lifespan=lifespan)
     app.include_router(student_course_subscriptions_routes.router)
     app.include_router(unsubscribe_student_routes.router)
+    app.include_router(change_course_capacity_routes.router)
     return app
